mainIngress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mainingress
  namespace: appsec
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
spec:
  rules:
    - http:
        paths:
          - path: /sonar
            pathType: Prefix
            backend:
              service:
                name: sonarqube-service
                port: 
                  number: 9000
          - path: /jenkins
            pathType: Prefix 
            backend:
              service:
                name: jenkins-service
                port: 
                  number: 8080
  tls:
    - secretName: tls-secrets
